# sd-xray

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env
sdXray/: main.py
sdXray/datasets/COVID-19_Radiography_Dataset/: images_path.csv
sdXray/datasets/CoCross/: images_path.csv
sdXray/datasets/Tuberculosis Segmentation/: images_path.csv
sdXray/datasets/lung-segmentation-dataset/: README.md  test.csv  train.csv
sdXray/datasets/lung_vessel/: lung_vessel.csv
sdXray/utils/: data_loader.py  exemples.py  models.py  tools.py
